# lucilleos

./: .gitignore  CMakeLists.txt  Makefile  limine.conf
boot/: boot.asm
kernel/: CMakeLists.txt  linker.ld
kernel/src/: kernel.asm  main.c
